# yolo26-trainer

./: .gitignore  README.md  main.py  mask_to_yolo_bbox.py  pyproject.toml
src/menu/: __init__.py  menu.py  predict_menu.py  train_menu.py  val_menu.py
src/training/: __init__.py  predict.py  train.py  val.py
src/utils/: file_dialog.py  mask_to_yolo_bbox.py  models.py  predict_settings.py  styles.py  train_settings.py  val_settings.py  validators.py
